Fix Monterey Safari layout issue.

--- a/src/pages/Post/index.css
+++ b/src/pages/Post/index.css
@@ -1,7 +1,6 @@
 .post {
   position: relative;
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 
 .post__header {
